# isf-pandas-msgpack

./: .gitignore  LICENSE.md  README.md  README.rst  pyproject.toml  release-procedure.md  setup.py
.github/workflows/: build.yml  ci.yml  publish.yml  test.yml
isf_pandas_msgpack/: __init__.py  packers.py  pandas_compat.py
isf_pandas_msgpack/msgpack/: _packer.cpp  _unpacker.cpp
isf_pandas_msgpack/tests/: test_basic.py  test_compression.py  test_nd_frame.py  test_packers.py
pandas_msgpack/: __init__.py  packers.py
pandas_msgpack/msgpack/: __init__.py  _packer.cpp  _unpacker.cpp
src/isf_pandas_msgpack/msgpack/: _packer.cpp  _unpacker.cpp
